--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,13 +3,13 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "blue-thumbnail.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     
     {
-      "src": "logo512.png",
+      "src": "blue-thumbnail.png",
       "type": "image/png",
       "sizes": "512x512"
     }
